# libVGF

./: CMakeLists.txt  Readme.txt
lib/: Common.c  Common.h  Read.c  Read.h  VGF.h  Write.c  Write.h  structs.h
tests/: test.c
